gatekeeper-policies/templates/10-secret-annotation-obligatoire-secret.yaml
cat <<EOF | kubectl apply -f -
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: k8srequiredsecretannotations
spec:
  crd:
    spec:
      names:
        kind: K8sRequiredSecretAnnotations
      validation:
        openAPIV3Schema:
          properties:
            annotations:
              type: array
              items:
                type: string
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8srequiredsecretannotations

        violation[{"msg": msg, "details": {"missing_annotations": missing}}] {
          input.review.object.kind == "Secret"
          provided := {annotation | input.review.object.metadata.annotations[annotation]}
          required := {annotation | annotation := input.parameters.annotations[_]}
          missing := required - provided
          count(missing) > 0
          msg := sprintf("Secret must have annotations: %v", [missing])
        }
EOF
