gatekeeper-policies/templates/2-require-probes.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8srequireprobes
spec:
  crd:
    spec:
      names:
        kind: K8sRequireProbes
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8srequireprobes
        violation[{"msg": msg}] {
          container := input.review.object.spec.containers[_]
          not container.readinessProbe
          msg := sprintf("Readiness probe manquante pour le conteneur : %v", [container.name])
        }
