gatekeeper-policies/templates/8-require-network-policy.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8srequirenetworkpolicy
spec:
  crd:
    spec:
      names:
        kind: K8sRequireNetworkPolicy
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8srequirenetworkpolicy
        violation[{"msg": msg}] {
          input.review.object.kind == "Namespace"
          not input.review.object.metadata.labels["network-policy"]
          msg := "Label 'network-policy' requis pour les namespaces"
        }
