gatekeeper-policies/templates/restrict-host-namespaces.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8srestricthostns
spec:
  crd:
    spec:
      names:
        kind: K8sRestrictHostNS
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8srestricthostns
        violation[{"msg": msg}] {
          input.review.object.spec.hostPID == true
          msg := "Usage du namespace PID host interdit"
        }
